--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "^5.23.0",
     "@strapi/plugin-users-permissions": "^5.23.0",
+    "@strapi/provider-upload-cloudinary": "^5.23.6",
     "@strapi/strapi": "^5.23.0",
     "pg": "^8.16.3",
     "react": "^18.3.1",
